[package]
name = "weather-to-prometheus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.0"
env_logger = "0.11.0"
log = "0.4.17"
prometheus-client = "0.24.0"
reqwest = { version = "0.13.0", features = ["json", "rustls"], default-features = false }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "2.0.0"
tokio = { version = "1.23.0", features = ["rt", "macros", "net", "num_cpus", "rt-multi-thread", "time"] }
